--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name" : "expresscoffee"
+    "name" : "reallyexpress"
     , "version": "0.1.0"
     , "author": "Esa-Matti Suuronen"
     , "main": "./lib/index"
