--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
     "name" : "piles"
     , "version": "0.1.0"
     , "author": "Esa-Matti Suuronen"
+    , "homepage": "https://github.com/epeli/node-piles"
+    , "bugs": {
+            "web": "https://github.com/epeli/node-piles/issues/"
+    }
+    , "repository":
+        { "type": "git"
+        , "url": "git://github.com/epeli/node-piles.git"
+    }
     , "main": "./lib/index"
     , "dependencies": {
         "coffee-script": ""
