Add few high-level tests

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         , "async": ""
     }
     , "devDependencies": {
-          "vows": ""
+          "jasmine-node": ""
+        , "zombie": ""
         , "supervisor": ""
         , "jade": ""
         , "stylus": ""
