Add css minifier. Closes #2

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         , "underscore.string": ""
         , "uglify-js": ""
         , "async": ""
+        , "csso": ""
     }
     , "devDependencies": {
           "jasmine-node": ""
