--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     , "devDependencies": {
           "jasmine-node": ""
         , "zombie": ""
-        , "express": ""
+        , "express": "2.x.x"
         , "supervisor": ""
         , "jade": ""
         , "stylus": ""
