--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     }
     , "devDependencies": {
           "jasmine-node": ""
-        , "zombie": ""
+        , "zombie": "1.2.x"
         , "express": "2.x.x"
         , "supervisor": ""
         , "jade": ""
