--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name" : "piler"
-    , "version": "0.3.5"
+    , "version": "0.3.6"
     , "author": "Esa-Matti Suuronen"
     , "homepage": "http://epeli.github.com/piler/"
     , "description": "Awesome Asset Manager for Node.js"
@@ -16,12 +16,12 @@
     }
     , "main": "./lib/index"
     , "dependencies": {
-        "coffee-script": ""
-        , "underscore": ""
-        , "underscore.string": ""
-        , "uglify-js": ""
-        , "async": ""
-        , "csso": ""
+        "coffee-script": "1.3.x"
+        , "underscore": "1.3.x"
+        , "underscore.string": "2.2.0rc"
+        , "uglify-js": "1.3.x"
+        , "async": "0.1.22"
+        , "csso": "1.2.x"
     }
     , "devDependencies": {
           "jasmine-node": ""
