--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "test": "./run-tests-travis.sh"
     }
     , "main": "./lib/index"
+    , "contributors":[
+        "Francois-Guillaume Ribreau <npm@fgribreau.com> (http://fgribreau.com)"
+    ]
     , "dependencies": {
         "coffee-script": "1.3.x"
         , "underscore": "1.3.x"
