--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name" : "piler"
+    "name" : "piler-compat"
     , "version": "0.4.1"
     , "author": "Esa-Matti Suuronen"
+    , "maintainers": "Alexander Pirsig <self@pirsig.net>"
     , "homepage": "http://epeli.github.com/piler/"
     , "description": "Awesome Asset Manager for Node.js"
     , "bugs": {
@@ -9,7 +10,7 @@
     }
     , "repository":
         { "type": "git"
-        , "url": "git://github.com/epeli/piler.git"
+        , "url": "https://github.com/piscis/piler.git"
     }
     , "scripts": {
         "test": "./run-tests-travis.sh"
