--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     }
     , "devDependencies": {
           "jasmine-node": ""
+        , "express": "2.x"
         , "zombie": "1.2.x"
         , "supervisor": ""
         , "jade": ""
