--- a/package.json
+++ b/package.json
@@ -1,43 +1,42 @@
 {
-    "name" : "piler"
-    , "version": "0.4.2"
-    , "author": "Esa-Matti Suuronen"
-    , "maintainers": [
-        "Alexander Pirsig <self@pirsig.net>"
-    ]
-    , "homepage": "http://epeli.github.com/piler/"
-    , "description": "Awesome Asset Manager for Node.js"
-    , "bugs": {
-            "url": "https://github.com/epeli/piler/issues/"
-    }
-    , "repository":
-        { "type": "git"
-        , "url": "https://github.com/epeli/piler.git"
-    }
-    , "scripts": {
-        "test": "./run-tests-travis.sh"
-    }
-    , "main": "./lib/index"
-    , "dependencies": {
-        "coffee-script": "1.3.x"
-        , "underscore": "1.3.x"
-        , "underscore.string": "2.2.0rc"
-        , "uglify-js": "1.3.x"
-        , "async": "0.1.22"
-        , "csso": "1.2.x"
-    }
-    , "devDependencies": {
-          "jasmine-node": ""
-        , "express": "2.x"
-        , "zombie": "1.2.x"
-        , "supervisor": ""
-        , "jade": ""
-        , "stylus": ""
-        , "nib": ""
-        , "less": ""
-        , "request": ""
-        , "csslint": ""
-        , "socket.io": ""
-    }
+  "name": "piler",
+  "version": "0.5.0",
+  "author": "Esa-Matti Suuronen",
+  "maintainers": [
+    "Alexander Pirsig <self@pirsig.net>"
+  ],
+  "homepage": "http://epeli.github.com/piler/",
+  "description": "Awesome Asset Manager for Node.js",
+  "bugs": {
+    "url": "https://github.com/epeli/piler/issues/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/epeli/piler.git"
+  },
+  "scripts": {
+    "test": "./run-tests-travis.sh"
+  },
+  "main": "./lib/index",
+  "dependencies": {
+    "coffee-script": "1.3.x",
+    "underscore": "1.3.x",
+    "underscore.string": "2.2.0rc",
+    "uglify-js": "1.3.x",
+    "async": "0.1.22",
+    "csso": "1.2.x"
+  },
+  "devDependencies": {
+    "jasmine-node": "",
+    "express": "2.x",
+    "zombie": "1.2.x",
+    "supervisor": "",
+    "jade": "",
+    "stylus": "",
+    "nib": "",
+    "less": "",
+    "request": "",
+    "csslint": "",
+    "socket.io": ""
+  }
 }
-
