--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "underscore.string": "2.2.0rc",
     "uglify-js": "1.3.x",
     "async": "0.1.22",
-    "csso": "1.2.x"
+    "csso": "1.2.x",
+    "html-minifier": "0.5.x"
   },
   "devDependencies": {
     "jasmine-node": "",
