--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "piler",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "author": "Esa-Matti Suuronen",
   "maintainers": [
-    "Alexander Pirsig <self@pirsig.net>"
+    "Alexander Pirsig <self@pirsig.net>",
+    "Paulo Cesar <email@pocesar.e4ward.com>"
   ],
   "homepage": "http://epeli.github.com/piler/",
   "description": "Awesome Asset Manager for Node.js",
@@ -15,28 +16,39 @@
     "url": "https://github.com/epeli/piler.git"
   },
   "scripts": {
-    "test": "./run-tests-travis.sh"
+    "compile": "coffee -o lib -c src",
+    "test": "npm run compile && node ./test/tests.js",
+    "serverstart": "node ./test/tests.js --start",
+    "precoverage": "npm run compile",
+    "coverage": "npm run serverstart | node ./node_modules/istanbul/lib/cli cover ./node_modules/mocha/bin/_mocha",
+    "precoveralls": "npm run compile",
+    "coveralls": "npm run serverstart | node ./node_modules/istanbul/lib/cli cover ./node_modules/mocha/bin/_mocha --report lcovonly -- && cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js"
   },
   "main": "./lib/index",
   "dependencies": {
-    "coffee-script": "1.3.x",
-    "underscore": "1.3.x",
-    "underscore.string": "2.2.0rc",
-    "uglify-js": "1.3.x",
-    "async": "0.1.22",
-    "csso": "1.2.x"
+    "coffee-script": "1.7.x",
+    "underscore": "1.x.x",
+    "underscore.string": "2.x.x",
+    "uglify-js": "1.x.x",
+    "async": "0.x.x",
+    "csso": "1.3.x"
   },
   "devDependencies": {
-    "jasmine-node": "",
-    "express": "2.x",
-    "zombie": "1.2.x",
-    "supervisor": "",
-    "jade": "",
-    "stylus": "",
-    "nib": "",
-    "less": "",
-    "request": "",
-    "csslint": "",
-    "socket.io": ""
+    "mocha": "*",
+    "express": "3.x",
+    "expect.js": "*",
+    "zombie": "1.x.x",
+    "supervisor": "*",
+    "jade": "*",
+    "stylus": "*",
+    "nib": "*",
+    "less": "*",
+    "istanbul":"*",
+    "serve-static": "*",
+    "request": "*",
+    "mocha-lcov-reporter": "*",
+    "coveralls": "*",
+    "csslint": "*",
+    "socket.io": "0.9.x"
   }
 }
