--- a/package.json
+++ b/package.json
@@ -11,33 +11,39 @@
   "bugs": {
     "url": "https://github.com/epeli/piler/issues/"
   },
+  "engines":{
+    "node":">=0.10"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/epeli/piler.git"
   },
   "scripts": {
-    "compile": "coffee -o lib -c src",
-    "test": "npm run compile && node ./test/tests.js",
+    "compile": "coffee --bare --no-header -o lib -c src",
+    "pretest": "npm run compile",
+    "test": "node ./test/tests.js",
     "serverstart": "node ./test/tests.js --start",
     "precoverage": "npm run compile",
     "coverage": "npm run serverstart | node ./node_modules/istanbul/lib/cli cover ./node_modules/mocha/bin/_mocha",
     "precoveralls": "npm run compile",
     "coveralls": "npm run serverstart | node ./node_modules/istanbul/lib/cli cover ./node_modules/mocha/bin/_mocha --report lcovonly -- && cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js"
   },
-  "main": "./lib/index",
+  "main": "./index",
   "dependencies": {
-    "coffee-script": "1.7.x",
+    "coffee-script": "1.x.x",
     "underscore": "1.x.x",
     "underscore.string": "2.x.x",
-    "uglify-js": "1.x.x",
+    "uglify-js": "2.x.x",
     "async": "0.x.x",
-    "csso": "1.3.x"
+    "csso": "1.x.x",
+    "debug": "*",
+    "reserved": "*"
   },
   "devDependencies": {
     "mocha": "*",
     "express": "3.x",
     "expect.js": "*",
-    "zombie": "1.x.x",
+    "zombie": ">=2.0.0-",
     "supervisor": "*",
     "jade": "*",
     "stylus": "*",
