--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "async": "0.1.22",
     "coffee-script": "1.3.x",
     "csso": "1.2.x",
-    "gaze": "^1.1.0",
+    "gaze": "1.1.0",
     "uglify-js": "1.3.x",
     "underscore": "1.3.x",
     "underscore.string": "2.2.0rc"
